<resources>
    <string name="app_name">GitHub Companion</string>
    <string name="github">GitHub</string>
    <string name="search">Search</string>
    <string name="app_name1">NavExam</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="keyword_empty">Search keyword cannot be empty.</string>
    <string name="forks">Forks</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="language">Language</string>
    <string name="watchers">Watchers</string>
    <string name="error_search_string">Error occurred while getting data</string>
    <string name="retry">Retry</string>
    <string name="stars">Stars</string>
    <string name="time">Time</string>
    <string name="filter">Filter</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading...</string>
    <string name="github_companion">GitHub Companion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
